	- removed unnecessary returnvalues from execute_mame2() and execute_mame3()
	
	create_report
	- added a summary at the end when "dokuwiki_format" is set
	- added support for multiple input folders (separated by ';')
	- updated comparison report to invoke pngcmp and output in HTML
	- added option "output_folder" for comparison reports
	- skip *_listsoftware.xml files
	- added option "recursive"
	- added header to docuwiki format
	- added command-line to docuwiki format
	- added speed comparison report (report_type 2)
	- fixed PNG comparison - images were in the wrong order
	- added support for slots
	- create "output_folder"
	
0.73
	- fixed potential memory leak in strip_sampleof_pinmame() detected by cppcheck
	- fixed various cppcheck warnings
	- fixed wrong variable being used in non-WIN32 code of wait_for_thread()
	- added missing pthread.h include for non-WIN32 code in common.c
	- fixed valgrind logfile location
	- do not use valgrind for executions without a driver_entry
	- added missing -lpthread in makefile
	- added -Wno-unused-variable to build without warnings with clang
	- corrected default valgrind parameters in source
	- added detection of duplicated bios entries
	- added message when no matching software entry could be found in the -listsoftwarelist output
	- renamed valgrind logfile to just valgrind.log
	- enabled DTD validation when reading -listsoftware output
	- added filter check to only try to run compatible -listsoftware entries
	- added detection of duplicated ramsize entries
	- do not remove the valgrind output with "store_output" set to 2 (again)
	- added filter_unprintable() to common.c/.h
	- filter unprintable characters before writing to XML
	- added mrt_array and append_to_array() to common.c/.h
	
	create_report
	- pass the file descriptor as parameter to PRINT_INFO
	- improved layout of comparison report
	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
	- filter unprintable characters from input XMLs